fixed message container vh spacing

--- a/main.css
+++ b/main.css
@@ -159,7 +159,7 @@ body{
     justify-content: center;
     align-items: center;
     margin: .3rem;
-    padding-top: 15vh;
+    padding-top: 5vh;
     padding-bottom: 1rem;
     z-index: 1;
 }
